@@ -16,9 +16,13 @@
  */
 package org.apache.kafka.common.security.oauthbearer.internals.unsecured;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import org.apache.kafka.common.security.auth.SaslExtensionsCallback;
+import org.apache.kafka.common.security.authenticator.TestJaasConfig;
+import org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule;
+import org.apache.kafka.common.security.oauthbearer.OAuthBearerTokenCallback;
+import org.apache.kafka.common.utils.MockTime;
+
+import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.util.Arrays;
@@ -27,16 +31,14 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import javax.security.auth.callback.Callback;
 import javax.security.auth.callback.UnsupportedCallbackException;
 
-import org.apache.kafka.common.security.auth.SaslExtensionsCallback;
-import org.apache.kafka.common.security.authenticator.TestJaasConfig;
-import org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule;
-import org.apache.kafka.common.security.oauthbearer.OAuthBearerTokenCallback;
-import org.apache.kafka.common.utils.MockTime;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class OAuthBearerUnsecuredLoginCallbackHandlerTest {
 
@@ -85,7 +87,7 @@ public class OAuthBearerUnsecuredLoginCallbackHandlerTest {
         assertNotNull(jws, "create token failed");
         long startMs = mockTime.milliseconds();
         confirmCorrectValues(jws, user, startMs, 1000 * 60 * 60);
-        assertEquals(new HashSet<>(Arrays.asList("sub", "iat", "exp")), jws.claims().keySet());
+        assertEquals(Set.of("sub", "iat", "exp"), jws.claims().keySet());
     }
 
     @SuppressWarnings("unchecked")
@@ -105,8 +107,8 @@ public class OAuthBearerUnsecuredLoginCallbackHandlerTest {
             options.put("unsecuredLoginListClaim_" + "emptyList1", "");
             options.put("unsecuredLoginListClaim_" + "emptyList2", ",");
             options.put("unsecuredLoginNumberClaim_" + "number", "1");
-            long lifetmeSeconds = 10000;
-            options.put("unsecuredLoginLifetimeSeconds", String.valueOf(lifetmeSeconds));
+            long lifetimeSeconds = 10000;
+            options.put("unsecuredLoginLifetimeSeconds", String.valueOf(lifetimeSeconds));
             options.put("unsecuredLoginPrincipalClaimName", principalClaimName);
             if (scopeClaimNameOptionValue != null)
                 options.put("unsecuredLoginScopeClaimName", scopeClaimNameOptionValue);
@@ -120,13 +122,13 @@ public class OAuthBearerUnsecuredLoginCallbackHandlerTest {
             OAuthBearerUnsecuredJws jws = (OAuthBearerUnsecuredJws) callback.token();
             assertNotNull(jws, "create token failed");
             long startMs = mockTime.milliseconds();
-            confirmCorrectValues(jws, user, startMs, lifetmeSeconds * 1000);
+            confirmCorrectValues(jws, user, startMs, lifetimeSeconds * 1000);
             Map<String, Object> claims = jws.claims();
-            assertEquals(new HashSet<>(Arrays.asList(actualScopeClaimName, principalClaimName, "iat", "exp", "number",
-                    "list", "emptyList1", "emptyList2")), claims.keySet());
-            assertEquals(new HashSet<>(Arrays.asList(explicitScope1, explicitScope2)),
+            assertEquals(Set.of(actualScopeClaimName, principalClaimName, "iat", "exp", "number",
+                    "list", "emptyList1", "emptyList2"), claims.keySet());
+            assertEquals(Set.of(explicitScope1, explicitScope2),
                     new HashSet<>((List<String>) claims.get(actualScopeClaimName)));
-            assertEquals(new HashSet<>(Arrays.asList(explicitScope1, explicitScope2)), jws.scope());
+            assertEquals(Set.of(explicitScope1, explicitScope2), jws.scope());
             assertEquals(1.0, jws.claim("number", Number.class));
             assertEquals(Arrays.asList("1", "2", ""), jws.claim("list", List.class));
             assertEquals(Collections.emptyList(), jws.claim("emptyList1", List.class));
@@ -143,7 +145,7 @@ public class OAuthBearerUnsecuredLoginCallbackHandlerTest {
         OAuthBearerUnsecuredLoginCallbackHandler callbackHandler = new OAuthBearerUnsecuredLoginCallbackHandler();
         callbackHandler.time(mockTime);
         callbackHandler.configure(Collections.emptyMap(), OAuthBearerLoginModule.OAUTHBEARER_MECHANISM,
-                Arrays.asList(config.getAppConfigurationEntry("KafkaClient")[0]));
+                Collections.singletonList(config.getAppConfigurationEntry("KafkaClient")[0]));
         return callbackHandler;
     }
 
