@@ -19,28 +19,22 @@ package kafka.server.builders;
 
 import kafka.log.LogManager;
 import kafka.server.AlterPartitionManager;
-import kafka.log.remote.RemoteLogManager;
-import kafka.server.BrokerTopicStats;
-import kafka.server.DelayedDeleteRecords;
-import kafka.server.DelayedElectLeader;
-import kafka.server.DelayedFetch;
-import kafka.server.DelayedOperationPurgatory;
-import kafka.server.DelayedProduce;
 import kafka.server.KafkaConfig;
-import kafka.server.MetadataCache;
 import kafka.server.QuotaFactory.QuotaManagers;
 import kafka.server.ReplicaManager;
-import kafka.zk.KafkaZkClient;
+
 import org.apache.kafka.common.metrics.Metrics;
 import org.apache.kafka.common.utils.Time;
-import org.apache.kafka.storage.internals.log.LogDirFailureChannel;
+import org.apache.kafka.metadata.MetadataCache;
+import org.apache.kafka.server.DelayedActionQueue;
+import org.apache.kafka.server.common.DirectoryEventHandler;
 import org.apache.kafka.server.util.Scheduler;
-import scala.compat.java8.OptionConverters;
+import org.apache.kafka.storage.internals.log.LogDirFailureChannel;
+import org.apache.kafka.storage.log.metrics.BrokerTopicStats;
 
-import java.util.Collections;
-import java.util.Optional;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.Map;
 
+import scala.Option;
 
 public class ReplicaManagerBuilder {
     private KafkaConfig config = null;
@@ -52,15 +46,7 @@ public class ReplicaManagerBuilder {
     private MetadataCache metadataCache = null;
     private LogDirFailureChannel logDirFailureChannel = null;
     private AlterPartitionManager alterPartitionManager = null;
-    private BrokerTopicStats brokerTopicStats = new BrokerTopicStats();
-    private AtomicBoolean isShuttingDown = new AtomicBoolean(false);
-    private Optional<RemoteLogManager> remoteLogManager = Optional.empty();
-    private Optional<KafkaZkClient> zkClient = Optional.empty();
-    private Optional<DelayedOperationPurgatory<DelayedProduce>> delayedProducePurgatory = Optional.empty();
-    private Optional<DelayedOperationPurgatory<DelayedFetch>> delayedFetchPurgatory = Optional.empty();
-    private Optional<DelayedOperationPurgatory<DelayedDeleteRecords>> delayedDeleteRecordsPurgatory = Optional.empty();
-    private Optional<DelayedOperationPurgatory<DelayedElectLeader>> delayedElectLeaderPurgatory = Optional.empty();
-    private Optional<String> threadNamePrefix = Optional.empty();
+    private BrokerTopicStats brokerTopicStats = null;
 
     public ReplicaManagerBuilder setConfig(KafkaConfig config) {
         this.config = config;
@@ -84,11 +70,6 @@ public class ReplicaManagerBuilder {
 
     public ReplicaManagerBuilder setLogManager(LogManager logManager) {
         this.logManager = logManager;
-        return this;
-    }
-
-    public ReplicaManagerBuilder setRemoteLogManager(RemoteLogManager remoteLogManager) {
-        this.remoteLogManager = Optional.ofNullable(remoteLogManager);
         return this;
     }
 
@@ -117,65 +98,37 @@ public class ReplicaManagerBuilder {
         return this;
     }
 
-    public ReplicaManagerBuilder setIsShuttingDown(AtomicBoolean isShuttingDown) {
-        this.isShuttingDown = isShuttingDown;
-        return this;
-    }
-
-    public ReplicaManagerBuilder setZkClient(KafkaZkClient zkClient) {
-        this.zkClient = Optional.of(zkClient);
-        return this;
-    }
-
-    public ReplicaManagerBuilder setDelayedProducePurgatory(DelayedOperationPurgatory<DelayedProduce> delayedProducePurgatory) {
-        this.delayedProducePurgatory = Optional.of(delayedProducePurgatory);
-        return this;
-    }
-
-    public ReplicaManagerBuilder setDelayedFetchPurgatory(DelayedOperationPurgatory<DelayedFetch> delayedFetchPurgatory) {
-        this.delayedFetchPurgatory = Optional.of(delayedFetchPurgatory);
-        return this;
-    }
-
-    public ReplicaManagerBuilder setDelayedDeleteRecordsPurgatory(DelayedOperationPurgatory<DelayedDeleteRecords> delayedDeleteRecordsPurgatory) {
-        this.delayedDeleteRecordsPurgatory = Optional.of(delayedDeleteRecordsPurgatory);
-        return this;
-    }
-
-    public ReplicaManagerBuilder setDelayedElectLeaderPurgatoryParam(DelayedOperationPurgatory<DelayedElectLeader> delayedElectLeaderPurgatory) {
-        this.delayedElectLeaderPurgatory = Optional.of(delayedElectLeaderPurgatory);
-        return this;
-    }
-
-    public ReplicaManagerBuilder setThreadNamePrefix(String threadNamePrefix) {
-        this.threadNamePrefix = Optional.of(threadNamePrefix);
-        return this;
-    }
-
     public ReplicaManager build() {
-        if (config == null) config = new KafkaConfig(Collections.emptyMap());
-        if (metrics == null) metrics = new Metrics();
+        if (config == null) config = new KafkaConfig(Map.of());
         if (logManager == null) throw new RuntimeException("You must set logManager");
         if (metadataCache == null) throw new RuntimeException("You must set metadataCache");
         if (logDirFailureChannel == null) throw new RuntimeException("You must set logDirFailureChannel");
         if (alterPartitionManager == null) throw new RuntimeException("You must set alterIsrManager");
+        if (brokerTopicStats == null) brokerTopicStats = new BrokerTopicStats(config.remoteLogManagerConfig().isRemoteStorageSystemEnabled());
+        // Initialize metrics in the end just before passing it to ReplicaManager to ensure ReplicaManager closes the
+        // metrics correctly. There might be a resource leak if it is initialized and an exception occurs between
+        // its initialization and creation of ReplicaManager.
+        if (metrics == null) metrics = new Metrics();
         return new ReplicaManager(config,
                              metrics,
                              time,
                              scheduler,
                              logManager,
-                             OptionConverters.toScala(remoteLogManager),
+                             Option.empty(),
                              quotaManagers,
                              metadataCache,
                              logDirFailureChannel,
                              alterPartitionManager,
                              brokerTopicStats,
-                             isShuttingDown,
-                             OptionConverters.toScala(zkClient),
-                             OptionConverters.toScala(delayedProducePurgatory),
-                             OptionConverters.toScala(delayedFetchPurgatory),
-                             OptionConverters.toScala(delayedDeleteRecordsPurgatory),
-                             OptionConverters.toScala(delayedElectLeaderPurgatory),
-                             OptionConverters.toScala(threadNamePrefix));
+                             Option.empty(),
+                             Option.empty(),
+                             Option.empty(),
+                             Option.empty(),
+                             Option.empty(),
+                             Option.empty(),
+                             () ->  -1L,
+                             Option.empty(),
+                             DirectoryEventHandler.NOOP,
+                             new DelayedActionQueue());
     }
 }
