@@ -19,11 +19,11 @@ package org.apache.kafka.controller;
 
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.metadata.Replicas;
+import org.apache.kafka.server.common.TopicIdPartition;
 import org.apache.kafka.timeline.SnapshotRegistry;
 import org.apache.kafka.timeline.TimelineHashMap;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -49,9 +49,9 @@ import static org.apache.kafka.metadata.Replicas.NONE;
  * works because partition IDs cannot be negative.
  */
 public class BrokersToIsrs {
-    private final static int LEADER_FLAG = 0x8000_0000;
+    private static final int LEADER_FLAG = 0x8000_0000;
 
-    private final static int REPLICA_MASK = 0x7fff_ffff;
+    private static final int REPLICA_MASK = 0x7fff_ffff;
 
     static class PartitionsOnReplicaIterator implements Iterator<TopicIdPartition> {
         private final Iterator<Entry<Uuid, int[]>> iterator;
@@ -256,11 +256,10 @@ public class BrokersToIsrs {
             }
         } else {
             int[] newPartitions = new int[partitions.length - 1];
-            int j = 0;
-            for (int i = 0; i < partitions.length; i++) {
-                int partition = partitions[i];
+            int i = 0;
+            for (int partition : partitions) {
                 if (partition != removedPartition) {
-                    newPartitions[j++] = partition;
+                    newPartitions[i++] = partition;
                 }
             }
             topicMap.put(topicId, newPartitions);
@@ -270,17 +269,13 @@ public class BrokersToIsrs {
     PartitionsOnReplicaIterator iterator(int brokerId, boolean leadersOnly) {
         Map<Uuid, int[]> topicMap = isrMembers.get(brokerId);
         if (topicMap == null) {
-            topicMap = Collections.emptyMap();
+            topicMap = Map.of();
         }
         return new PartitionsOnReplicaIterator(topicMap, leadersOnly);
     }
 
     PartitionsOnReplicaIterator partitionsWithNoLeader() {
         return iterator(NO_LEADER, true);
-    }
-
-    PartitionsOnReplicaIterator partitionsLedByBroker(int brokerId) {
-        return iterator(brokerId, true);
     }
 
     PartitionsOnReplicaIterator partitionsWithBrokerInIsr(int brokerId) {
