@@ -21,6 +21,7 @@ import org.apache.kafka.common.message.DescribeClientQuotasResponseData.ValueDat
 import org.apache.kafka.common.metadata.ClientQuotaRecord;
 import org.apache.kafka.common.metadata.ClientQuotaRecord.EntityData;
 import org.apache.kafka.common.quota.ClientQuotaEntity;
+import org.apache.kafka.image.node.ClientQuotaImageNode;
 import org.apache.kafka.image.writer.ImageWriter;
 import org.apache.kafka.image.writer.ImageWriterOptions;
 
@@ -28,10 +29,9 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map.Entry;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 
 /**
@@ -40,7 +40,7 @@ import java.util.stream.Collectors;
  * This class is thread-safe.
  */
 public final class ClientQuotaImage {
-    public final static ClientQuotaImage EMPTY = new ClientQuotaImage(Collections.emptyMap());
+    public static final ClientQuotaImage EMPTY = new ClientQuotaImage(Map.of());
 
     private final Map<String, Double> quotas;
 
@@ -102,8 +102,7 @@ public final class ClientQuotaImage {
 
     @Override
     public boolean equals(Object o) {
-        if (!(o instanceof ClientQuotaImage)) return false;
-        ClientQuotaImage other = (ClientQuotaImage) o;
+        if (!(o instanceof ClientQuotaImage other)) return false;
         return quotas.equals(other.quotas);
     }
 
@@ -114,8 +113,6 @@ public final class ClientQuotaImage {
 
     @Override
     public String toString() {
-        return "ClientQuotaImage(quotas=" + quotas.entrySet().stream().
-            map(e -> e.getKey() + ":" + e.getValue()).collect(Collectors.joining(", ")) +
-            ")";
+        return new ClientQuotaImageNode(this).stringify();
     }
 }
