@@ -17,16 +17,6 @@
 
 package org.apache.kafka.controller;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-
-import org.apache.kafka.clients.ApiVersions;
 import org.apache.kafka.clients.admin.FeatureUpdate;
 import org.apache.kafka.common.metadata.FeatureLevelRecord;
 import org.apache.kafka.common.protocol.Errors;
@@ -36,22 +26,35 @@ import org.apache.kafka.metadata.FinalizedControllerFeatures;
 import org.apache.kafka.metadata.RecordTestUtils;
 import org.apache.kafka.metadata.VersionRange;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.Feature;
+import org.apache.kafka.server.common.KRaftVersion;
 import org.apache.kafka.server.common.MetadataVersion;
+import org.apache.kafka.server.common.MetadataVersionTestUtils;
+import org.apache.kafka.server.common.TestFeatureVersion;
+import org.apache.kafka.server.common.TransactionVersion;
 import org.apache.kafka.timeline.SnapshotRegistry;
+
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import static java.util.Collections.emptyList;
-import static java.util.Collections.emptyMap;
-import static java.util.Collections.singletonMap;
+import java.util.AbstractMap.SimpleImmutableEntry;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
 @Timeout(value = 40)
 public class FeatureControlManagerTest {
 
-    @SuppressWarnings("unchecked")
     private static Map<String, VersionRange> rangeMap(Object... args) {
         Map<String, VersionRange> result = new HashMap<>();
         for (int i = 0; i < args.length; i += 3) {
@@ -74,9 +77,9 @@ public class FeatureControlManagerTest {
     }
 
     public static QuorumFeatures features(Object... args) {
-        Map<String, VersionRange> features = QuorumFeatures.defaultFeatureMap();
+        Map<String, VersionRange> features = QuorumFeatures.defaultSupportedFeatureMap(true);
         features.putAll(rangeMap(args));
-        return new QuorumFeatures(0, new ApiVersions(), features, emptyList());
+        return new QuorumFeatures(0, features, List.of());
     }
 
     private static Map<String, Short> updateMap(Object... args) {
@@ -93,31 +96,36 @@ public class FeatureControlManagerTest {
     public void testUpdateFeatures() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(new LogContext());
         FeatureControlManager manager = new FeatureControlManager.Builder().
-            setQuorumFeatures(features("foo", 1, 2)).
+            setQuorumFeatures(features(TestFeatureVersion.FEATURE_NAME, 0, 2)).
             setSnapshotRegistry(snapshotRegistry).
-            setMetadataVersion(MetadataVersion.IBP_3_3_IV0).
             build();
-        snapshotRegistry.getOrCreateSnapshot(-1);
-        assertEquals(new FinalizedControllerFeatures(Collections.singletonMap("metadata.version", (short) 4), -1),
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
+        snapshotRegistry.idempotentCreateSnapshot(-1);
+        assertEquals(new FinalizedControllerFeatures(Map.of("metadata.version", MetadataVersion.MINIMUM_VERSION.featureLevel()), -1),
             manager.finalizedFeatures(-1));
-        assertEquals(ControllerResult.atomicOf(emptyList(), Collections.
-                singletonMap("foo", new ApiError(Errors.INVALID_UPDATE_VERSION,
-                    "Invalid update version 3 for feature foo. Local controller 0 only supports versions 1-2"))),
-            manager.updateFeatures(updateMap("foo", 3),
-                Collections.singletonMap("foo", FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
-                Collections.emptyMap(), false));
-        ControllerResult<Map<String, ApiError>> result = manager.updateFeatures(
-                updateMap("foo", 2, "bar", 1), Collections.emptyMap(),
-                Collections.emptyMap(), false);
-        Map<String, ApiError> expectedMap = new HashMap<>();
-        expectedMap.put("foo", ApiError.NONE);
-        expectedMap.put("bar", new ApiError(Errors.INVALID_UPDATE_VERSION,
-                "Invalid update version 1 for feature bar. Local controller 0 does not support this feature."));
-        assertEquals(expectedMap, result.response());
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 3 for feature " + TestFeatureVersion.FEATURE_NAME + ". Local controller 0 only supports versions 0-2")),
+            manager.updateFeatures(updateMap(TestFeatureVersion.FEATURE_NAME, 3),
+                Map.of(TestFeatureVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
+                false, 0));
+        ControllerResult<ApiError> result = manager.updateFeatures(
+                updateMap(TestFeatureVersion.FEATURE_NAME, 1, "bar", 1), Map.of(),
+                false, 0);
+        ApiError expectedError = new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 1 for feature bar. Local controller 0 does not support this feature.");
         List<ApiMessageAndVersion> expectedMessages = new ArrayList<>();
+        assertEquals(expectedError, result.response());
+        assertEquals(expectedMessages, result.records());
+
+        result = manager.updateFeatures(
+                updateMap(TestFeatureVersion.FEATURE_NAME, 1), Map.of(),
+                false, 0);
+        expectedError =  ApiError.NONE;
+        assertEquals(expectedError, result.response());
+        expectedMessages = new ArrayList<>();
         expectedMessages.add(new ApiMessageAndVersion(new FeatureLevelRecord().
-            setName("foo").setFeatureLevel((short) 2),
-            (short) 0));
+                setName(TestFeatureVersion.FEATURE_NAME).setFeatureLevel((short) 1),
+                (short) 0));
         assertEquals(expectedMessages, result.records());
     }
 
@@ -128,17 +136,58 @@ public class FeatureControlManagerTest {
         FeatureLevelRecord record = new FeatureLevelRecord().
             setName("foo").setFeatureLevel((short) 2);
 
-        snapshotRegistry.getOrCreateSnapshot(-1);
+        snapshotRegistry.idempotentCreateSnapshot(-1);
         FeatureControlManager manager = new FeatureControlManager.Builder().
                 setLogContext(logContext).
                 setQuorumFeatures(features("foo", 1, 2)).
                 setSnapshotRegistry(snapshotRegistry).
-                setMetadataVersion(MetadataVersion.IBP_3_3_IV0).
                 build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
         manager.replay(record);
-        snapshotRegistry.getOrCreateSnapshot(123);
-        assertEquals(new FinalizedControllerFeatures(versionMap("metadata.version", 4, "foo", 2), 123),
+        snapshotRegistry.idempotentCreateSnapshot(123);
+        assertEquals(
+            new FinalizedControllerFeatures(versionMap("metadata.version", MetadataVersion.MINIMUM_VERSION.featureLevel(), "foo", 2), 123),
             manager.finalizedFeatures(123));
+    }
+
+    @Test
+    public void testReplayKraftVersionFeatureLevel() {
+        LogContext logContext = new LogContext();
+        SnapshotRegistry snapshotRegistry = new SnapshotRegistry(logContext);
+
+        snapshotRegistry.idempotentCreateSnapshot(-1);
+        FeatureControlManager manager = new FeatureControlManager.Builder().
+                setLogContext(logContext).
+                setQuorumFeatures(features("foo", 1, 2)).
+                setSnapshotRegistry(snapshotRegistry).
+                build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
+        // Replay a kraft.version feature level record and shot that the level doesn't get updated
+        manager.replay(new FeatureLevelRecord().setName(KRaftVersion.FEATURE_NAME).setFeatureLevel(KRaftVersion.LATEST_PRODUCTION.featureLevel()));
+        snapshotRegistry.idempotentCreateSnapshot(123);
+        assertEquals(
+            new FinalizedControllerFeatures(
+                versionMap("metadata.version", MetadataVersion.MINIMUM_VERSION.featureLevel()), 123
+            ),
+            manager.finalizedFeatures(123)
+        );
+    }
+
+    static ClusterFeatureSupportDescriber createFakeClusterFeatureSupportDescriber(
+        List<Map.Entry<Integer, Map<String, VersionRange>>> brokerRanges,
+        List<Map.Entry<Integer, Map<String, VersionRange>>> controllerRanges
+    ) {
+        return new ClusterFeatureSupportDescriber() {
+            @Override
+            public Iterator<Map.Entry<Integer, Map<String, VersionRange>>> brokerSupported() {
+                return brokerRanges.iterator();
+            }
+
+            @Override
+            public Iterator<Map.Entry<Integer, Map<String, VersionRange>>> controllerSupported() {
+                return controllerRanges.iterator();
+            }
+        };
     }
 
     @Test
@@ -147,269 +196,299 @@ public class FeatureControlManagerTest {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(logContext);
         FeatureControlManager manager = new FeatureControlManager.Builder().
             setLogContext(logContext).
-            setQuorumFeatures(features("foo", 1, 5, "bar", 1, 2)).
+            setQuorumFeatures(features("foo", 1, 5, TransactionVersion.FEATURE_NAME, 0, 3)).
             setSnapshotRegistry(snapshotRegistry).
+            setClusterFeatureSupportDescriber(createFakeClusterFeatureSupportDescriber(
+                List.of(new SimpleImmutableEntry<>(5, Map.of(TransactionVersion.FEATURE_NAME, VersionRange.of(0, 2)))),
+                List.of())).
             build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
 
-        assertEquals(
-            ControllerResult.atomicOf(
-                emptyList(),
-                Collections.singletonMap(
-                    "foo",
-                    new ApiError(
-                        Errors.INVALID_UPDATE_VERSION,
-                        "Invalid update version 3 for feature foo. Broker 5 does not support this feature."
-                    )
-                )
-            ),
-            manager.updateFeatures(
-                updateMap("foo", 3),
-                Collections.singletonMap("foo", FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
-                Collections.singletonMap(5, rangeMap()),
-                false)
-        );
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 3 for feature foo. Broker 5 does not support this feature.")),
+                    manager.updateFeatures(updateMap("foo", 3),
+                        Map.of("foo", FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
+                        false, 0));
 
-        ControllerResult<Map<String, ApiError>> result = manager.updateFeatures(
-            updateMap("foo", 3), Collections.emptyMap(), Collections.emptyMap(), false);
-        assertEquals(Collections.singletonMap("foo", ApiError.NONE), result.response());
+        ControllerResult<ApiError> result = manager.updateFeatures(
+            updateMap(TransactionVersion.FEATURE_NAME, 2), Map.of(), false, 0);
+        assertEquals(ApiError.NONE, result.response());
         manager.replay((FeatureLevelRecord) result.records().get(0).message());
-        snapshotRegistry.getOrCreateSnapshot(3);
+        snapshotRegistry.idempotentCreateSnapshot(3);
 
-        assertEquals(ControllerResult.atomicOf(emptyList(), Collections.
-                singletonMap("foo", new ApiError(Errors.INVALID_UPDATE_VERSION,
-                    "Invalid update version 2 for feature foo. Can't downgrade the version of this feature " +
-                    "without setting the upgrade type to either safe or unsafe downgrade."))),
-            manager.updateFeatures(updateMap("foo", 2),
-                Collections.emptyMap(), Collections.emptyMap(), false));
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 1 for feature " + TransactionVersion.FEATURE_NAME + "." +
+            " Can't downgrade the version of this feature without setting the upgrade type to either safe or unsafe downgrade.")),
+            manager.updateFeatures(updateMap(TransactionVersion.FEATURE_NAME, 1), Map.of(), false, 0));
 
         assertEquals(
             ControllerResult.atomicOf(
-                Collections.singletonList(
+                List.of(
                     new ApiMessageAndVersion(
                         new FeatureLevelRecord()
-                            .setName("foo")
-                            .setFeatureLevel((short) 2),
+                            .setName(TransactionVersion.FEATURE_NAME)
+                            .setFeatureLevel((short) 1),
                         (short) 0
                     )
                 ),
-                Collections.singletonMap("foo", ApiError.NONE)
+                ApiError.NONE
             ),
             manager.updateFeatures(
-                updateMap("foo", 2),
-                Collections.singletonMap("foo", FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
-                Collections.emptyMap(),
-                false)
+                updateMap(TransactionVersion.FEATURE_NAME, 1),
+                Map.of(TransactionVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
+                false,
+                0)
         );
     }
 
     @Test
-    public void testReplayRecords() throws Exception {
+    public void testReplayRecords() {
         LogContext logContext = new LogContext();
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(logContext);
         FeatureControlManager manager = new FeatureControlManager.Builder().
             setLogContext(logContext).
-            setQuorumFeatures(features("foo", 1, 5, "bar", 1, 2)).
+            setQuorumFeatures(features(TestFeatureVersion.FEATURE_NAME, 0, 5, TransactionVersion.FEATURE_NAME, 0, 2)).
             setSnapshotRegistry(snapshotRegistry).
-            setMetadataVersion(MetadataVersion.IBP_3_3_IV0).
             build();
-        ControllerResult<Map<String, ApiError>> result = manager.
-            updateFeatures(updateMap("foo", 5, "bar", 1),
-                Collections.emptyMap(), Collections.emptyMap(), false);
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
+        ControllerResult<ApiError> result = manager.
+            updateFeatures(updateMap(TestFeatureVersion.FEATURE_NAME, 1, TransactionVersion.FEATURE_NAME, 2), Map.of(), false, 0);
         RecordTestUtils.replayAll(manager, result.records());
-        assertEquals(MetadataVersion.IBP_3_3_IV0, manager.metadataVersion());
-        assertEquals(Optional.of((short) 5), manager.finalizedFeatures(Long.MAX_VALUE).get("foo"));
-        assertEquals(Optional.of((short) 1), manager.finalizedFeatures(Long.MAX_VALUE).get("bar"));
-        assertEquals(new HashSet<>(Arrays.asList(
-            MetadataVersion.FEATURE_NAME, "foo", "bar")),
-                manager.finalizedFeatures(Long.MAX_VALUE).featureNames());
+        assertEquals(MetadataVersion.MINIMUM_VERSION, manager.metadataVersionOrThrow());
+        assertEquals(Optional.of((short) 1), manager.finalizedFeatures(Long.MAX_VALUE).get(TestFeatureVersion.FEATURE_NAME));
+        assertEquals(Optional.of((short) 2), manager.finalizedFeatures(Long.MAX_VALUE).get(TransactionVersion.FEATURE_NAME));
+        assertEquals(Set.of(MetadataVersion.FEATURE_NAME, TestFeatureVersion.FEATURE_NAME, TransactionVersion.FEATURE_NAME),
+            manager.finalizedFeatures(Long.MAX_VALUE).featureNames());
     }
 
-    private static final FeatureControlManager.Builder TEST_MANAGER_BUILDER1 =
-            new FeatureControlManager.Builder().
-                    setQuorumFeatures(features(MetadataVersion.FEATURE_NAME,
-                            MetadataVersion.IBP_3_3_IV0.featureLevel(), MetadataVersion.IBP_3_3_IV3.featureLevel())).
-                    setMetadataVersion(MetadataVersion.IBP_3_3_IV2);
+    private FeatureControlManager createTestManager() {
+        FeatureControlManager manager = new FeatureControlManager.Builder().
+            setQuorumFeatures(features(MetadataVersion.FEATURE_NAME,
+                MetadataVersion.MINIMUM_VERSION.featureLevel(), MetadataVersion.IBP_3_6_IV0.featureLevel())).
+            build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.IBP_3_4_IV0.featureLevel()));
+        return manager;
+    }
 
     @Test
     public void testApplyMetadataVersionChangeRecord() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
+        FeatureControlManager manager = createTestManager();
+        MetadataVersion initialMetadataVersion = manager.metadataVersionOrThrow();
         manager.replay(new FeatureLevelRecord().
             setName(MetadataVersion.FEATURE_NAME).
-            setFeatureLevel(MetadataVersion.IBP_3_3_IV3.featureLevel()));
-        assertEquals(MetadataVersion.IBP_3_3_IV3, manager.metadataVersion());
-    }
-
-    @Test
-    public void testCannotDowngradeToVersionBeforeMinimumSupportedKraftVersion() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-            singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                "Invalid update version 3 for feature metadata.version. Local controller 0 only " +
-                "supports versions 4-7"))),
-            manager.updateFeatures(
-                singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_2_IV0.featureLevel()),
-                singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
-                emptyMap(),
-                true));
+            setFeatureLevel((short) (initialMetadataVersion.featureLevel() + 1)));
+        assertEquals(MetadataVersion.IBP_3_5_IV0, manager.metadataVersionOrThrow());
     }
 
     @Test
     public void testCannotDowngradeToHigherVersion() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-            singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                "Invalid update version 7 for feature metadata.version. Can't downgrade to a " +
-                "newer version."))),
+        FeatureControlManager manager = createTestManager();
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 9 for feature metadata.version. Can't downgrade to a " +
+            "newer version.")),
             manager.updateFeatures(
-                singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV3.featureLevel()),
-                singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
-                emptyMap(),
-                true));
+                Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_5_IV0.featureLevel()),
+                Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
+                true,
+                0));
     }
 
     @Test
     public void testCannotUnsafeDowngradeToHigherVersion() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-            singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                "Invalid update version 7 for feature metadata.version. Can't downgrade to a " +
-                "newer version."))),
+        FeatureControlManager manager = createTestManager();
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 9 for feature metadata.version. Can't downgrade to a " +
+            "newer version.")),
             manager.updateFeatures(
-                singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV3.featureLevel()),
-                singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
-                emptyMap(),
-                true));
+                Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_5_IV0.featureLevel()),
+                Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
+                true,
+                0));
     }
 
     @Test
     public void testCannotUpgradeToLowerVersion() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-            singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                "Invalid update version 4 for feature metadata.version. Can't downgrade the " +
-                "version of this feature without setting the upgrade type to either safe or " +
-                "unsafe downgrade."))),
+        FeatureControlManager manager = new FeatureControlManager.Builder().
+            setQuorumFeatures(features(MetadataVersion.FEATURE_NAME,
+                MetadataVersion.MINIMUM_VERSION.featureLevel(), MetadataVersion.IBP_3_6_IV0.featureLevel())).
+            build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.IBP_3_5_IV1.featureLevel()));
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid update version 9 for feature metadata.version. Can't downgrade the " +
+            "version of this feature without setting the upgrade type to either safe or " +
+            "unsafe downgrade.")),
             manager.updateFeatures(
-                singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV0.featureLevel()),
-                singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UPGRADE),
-                emptyMap(),
-                true));
+                Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_5_IV0.featureLevel()),
+                Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UPGRADE),
+                true,
+                0));
     }
 
     @Test
     public void testCanUpgradeToHigherVersion() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-            singletonMap(MetadataVersion.FEATURE_NAME, ApiError.NONE)),
+        FeatureControlManager manager = createTestManager();
+        assertEquals(ControllerResult.of(List.of(), ApiError.NONE),
             manager.updateFeatures(
-                singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV3.featureLevel()),
-                singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UPGRADE),
-                emptyMap(),
-                true));
+                Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_5_IV0.featureLevel()),
+                Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UPGRADE),
+                true,
+                0));
     }
 
     @Test
     public void testCannotUseSafeDowngradeIfMetadataChanged() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-            singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                "Invalid metadata.version 4. Refusing to perform the requested downgrade because " +
-                "it might delete metadata information. Retry using UNSAFE_DOWNGRADE if you want to " +
-                "force the downgrade to proceed."))),
+        FeatureControlManager manager = createTestManager();
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid metadata.version 7. Refusing to perform the requested downgrade because " +
+            "it might delete metadata information.")),
             manager.updateFeatures(
-                singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV0.featureLevel()),
-                singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
-                emptyMap(),
-                true));
+                Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV3.featureLevel()),
+                Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
+                true,
+                0));
     }
 
     @Test
     public void testUnsafeDowngradeIsTemporarilyDisabled() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-                        singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                                "Invalid metadata.version 4. Unsafe metadata downgrade is not supported in this version."))),
+        FeatureControlManager manager = createTestManager();
+        assertEquals(ControllerResult.of(List.of(), new ApiError(Errors.INVALID_UPDATE_VERSION,
+            "Invalid metadata.version 7. Unsafe metadata downgrade is not supported in this version.")),
                 manager.updateFeatures(
-                        singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV0.featureLevel()),
-                        singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
-                        emptyMap(),
-                        true));
+                    Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV3.featureLevel()),
+                    Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
+                    true,
+                    0));
     }
 
     @Disabled
     @Test
     public void testCanUseUnsafeDowngradeIfMetadataChanged() {
-        FeatureControlManager manager = TEST_MANAGER_BUILDER1.build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-                        singletonMap(MetadataVersion.FEATURE_NAME, ApiError.NONE)),
+        FeatureControlManager manager = createTestManager();
+        assertEquals(ControllerResult.of(List.of(), ApiError.NONE),
                 manager.updateFeatures(
-                        singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV0.featureLevel()),
-                        singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
-                        emptyMap(),
-                        true));
+                        Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_3_IV3.featureLevel()),
+                        Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
+                        true,
+                        0));
     }
 
     @Test
     public void testCanUseSafeDowngradeIfMetadataDidNotChange() {
         FeatureControlManager manager = new FeatureControlManager.Builder().
                 setQuorumFeatures(features(MetadataVersion.FEATURE_NAME,
-                        MetadataVersion.IBP_3_0_IV0.featureLevel(), MetadataVersion.IBP_3_3_IV1.featureLevel())).
-                setMetadataVersion(MetadataVersion.IBP_3_1_IV0).
-                setMinimumBootstrapVersion(MetadataVersion.IBP_3_0_IV0).build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-                        singletonMap(MetadataVersion.FEATURE_NAME, ApiError.NONE)),
+                        MetadataVersion.MINIMUM_VERSION.featureLevel(), MetadataVersion.IBP_3_6_IV0.featureLevel())).
+                build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.IBP_3_5_IV0.featureLevel()));
+        assertEquals(ControllerResult.of(List.of(), ApiError.NONE),
                 manager.updateFeatures(
-                        singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_0_IV1.featureLevel()),
-                        singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
-                        emptyMap(),
-                        true));
+                        Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_4_IV0.featureLevel()),
+                        Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.SAFE_DOWNGRADE),
+                        true,
+                        0));
     }
 
     @Test
-    public void testCanotDowngradeBefore3_3_IV0() {
+    public void testCannotDowngradeBeforeMinimumKraftVersion() {
         FeatureControlManager manager = new FeatureControlManager.Builder().
             setQuorumFeatures(features(MetadataVersion.FEATURE_NAME,
-                    MetadataVersion.IBP_3_0_IV0.featureLevel(), MetadataVersion.IBP_3_3_IV3.featureLevel())).
-                    setMetadataVersion(MetadataVersion.IBP_3_3_IV0).build();
-        assertEquals(ControllerResult.of(Collections.emptyList(),
-                        singletonMap(MetadataVersion.FEATURE_NAME, new ApiError(Errors.INVALID_UPDATE_VERSION,
-                        "Invalid metadata.version 3. Unable to set a metadata.version less than 3.3-IV0"))),
-                manager.updateFeatures(
-                        singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_2_IV0.featureLevel()),
-                        singletonMap(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
-                        emptyMap(),
-                        true));
+                MetadataVersion.MINIMUM_VERSION.featureLevel(), MetadataVersion.latestTesting().featureLevel())).
+            build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
+        assertEquals(
+            ControllerResult.of(
+                List.of(),
+                new ApiError(
+                    Errors.INVALID_UPDATE_VERSION,
+                    String.format(
+                        "Invalid update version 6 for feature metadata.version. Local controller 0 only supports versions %s-%s",
+                        MetadataVersion.MINIMUM_VERSION.featureLevel(),
+                        MetadataVersion.latestTesting().featureLevel()
+                    )
+                )
+            ),
+            manager.updateFeatures(
+                Map.of(MetadataVersion.FEATURE_NAME, MetadataVersionTestUtils.IBP_3_3_IV2_FEATURE_LEVEL),
+                Map.of(MetadataVersion.FEATURE_NAME, FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
+                true,
+                0
+            )
+        );
     }
 
     @Test
     public void testCreateFeatureLevelRecords() {
         Map<String, VersionRange> localSupportedFeatures = new HashMap<>();
         localSupportedFeatures.put(MetadataVersion.FEATURE_NAME, VersionRange.of(
-                MetadataVersion.IBP_3_0_IV1.featureLevel(), MetadataVersion.latest().featureLevel()));
-        localSupportedFeatures.put("foo", VersionRange.of(0, 2));
+            MetadataVersion.MINIMUM_VERSION.featureLevel(), MetadataVersion.latestTesting().featureLevel()));
+        localSupportedFeatures.put(Feature.TEST_VERSION.featureName(), VersionRange.of(0, 2));
         FeatureControlManager manager = new FeatureControlManager.Builder().
-                setQuorumFeatures(new QuorumFeatures(0, new ApiVersions(), localSupportedFeatures, emptyList())).
+            setQuorumFeatures(new QuorumFeatures(0, localSupportedFeatures, List.of())).
+            setClusterFeatureSupportDescriber(createFakeClusterFeatureSupportDescriber(
+                List.of(new SimpleImmutableEntry<>(1, Map.of(Feature.TEST_VERSION.featureName(), VersionRange.of(0, 3)))),
+                List.of())).
                 build();
-        ControllerResult<Map<String, ApiError>> result  = manager.updateFeatures(
-                Collections.singletonMap("foo", (short) 1),
-                Collections.singletonMap("foo", FeatureUpdate.UpgradeType.UPGRADE),
-                Collections.singletonMap(1, Collections.singletonMap("foo", VersionRange.of(0, 3))),
-                false);
-        assertEquals(ControllerResult.atomicOf(Arrays.asList(new ApiMessageAndVersion(
-                new FeatureLevelRecord().setName("foo").setFeatureLevel((short) 1), (short) 0)),
-                        Collections.singletonMap("foo", ApiError.NONE)), result);
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
+        ControllerResult<ApiError> result  = manager.updateFeatures(
+                Map.of(Feature.TEST_VERSION.featureName(), (short) 1),
+                Map.of(Feature.TEST_VERSION.featureName(), FeatureUpdate.UpgradeType.UPGRADE),
+                false,
+                0);
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
+                new FeatureLevelRecord().setName(Feature.TEST_VERSION.featureName()).setFeatureLevel((short) 1), (short) 0)),
+                ApiError.NONE), result);
         RecordTestUtils.replayAll(manager, result.records());
-        assertEquals(Optional.of((short) 1), manager.finalizedFeatures(Long.MAX_VALUE).get("foo"));
+        assertEquals(Optional.of((short) 1), manager.finalizedFeatures(Long.MAX_VALUE).get(Feature.TEST_VERSION.featureName()));
 
-        ControllerResult<Map<String, ApiError>> result2  = manager.updateFeatures(
-                Collections.singletonMap("foo", (short) 0),
-                Collections.singletonMap("foo", FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
-                Collections.singletonMap(1, Collections.singletonMap("foo", VersionRange.of(0, 3))),
-                false);
-        assertEquals(ControllerResult.atomicOf(Arrays.asList(new ApiMessageAndVersion(
-                        new FeatureLevelRecord().setName("foo").setFeatureLevel((short) 0), (short) 0)),
-                Collections.singletonMap("foo", ApiError.NONE)), result2);
+        ControllerResult<ApiError> result2  = manager.updateFeatures(
+                Map.of(Feature.TEST_VERSION.featureName(), (short) 0),
+                Map.of(Feature.TEST_VERSION.featureName(), FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE),
+                false,
+                0);
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
+            new FeatureLevelRecord().setName(Feature.TEST_VERSION.featureName()).setFeatureLevel((short) 0), (short) 0)),
+            ApiError.NONE), result2);
         RecordTestUtils.replayAll(manager, result2.records());
-        assertEquals(Optional.empty(), manager.finalizedFeatures(Long.MAX_VALUE).get("foo"));
+        assertEquals(Optional.empty(), manager.finalizedFeatures(Long.MAX_VALUE).get(Feature.TEST_VERSION.featureName()));
+    }
+
+    @Test
+    public void testUpgradeElrFeatureLevel() {
+        Map<String, VersionRange> localSupportedFeatures = new HashMap<>();
+        localSupportedFeatures.put(MetadataVersion.FEATURE_NAME, VersionRange.of(
+            MetadataVersion.IBP_4_0_IV1.featureLevel(), MetadataVersion.latestTesting().featureLevel()));
+        localSupportedFeatures.put(Feature.ELIGIBLE_LEADER_REPLICAS_VERSION.featureName(), VersionRange.of(0, 1));
+        FeatureControlManager manager = new FeatureControlManager.Builder().
+            setQuorumFeatures(new QuorumFeatures(0, localSupportedFeatures, List.of())).
+            setClusterFeatureSupportDescriber(createFakeClusterFeatureSupportDescriber(
+                List.of(new SimpleImmutableEntry<>(1, Map.of(Feature.ELIGIBLE_LEADER_REPLICAS_VERSION.featureName(), VersionRange.of(0, 1)))),
+                List.of())).
+            build();
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.IBP_4_0_IV1.featureLevel()));
+        ControllerResult<ApiError> result = manager.updateFeatures(
+            Map.of(Feature.ELIGIBLE_LEADER_REPLICAS_VERSION.featureName(), (short) 1),
+            Map.of(Feature.ELIGIBLE_LEADER_REPLICAS_VERSION.featureName(), FeatureUpdate.UpgradeType.UPGRADE),
+            false,
+            0);
+        assertTrue(result.response().isSuccess());
+        assertEquals(List.of(new ApiMessageAndVersion(
+            new FeatureLevelRecord().
+                setName(Feature.ELIGIBLE_LEADER_REPLICAS_VERSION.featureName()).
+                setFeatureLevel((short) 1), (short) 0)),
+            result.records());
+        RecordTestUtils.replayAll(manager, result.records());
+        assertEquals(Optional.of((short) 1), manager.finalizedFeatures(Long.MAX_VALUE).
+            get(Feature.ELIGIBLE_LEADER_REPLICAS_VERSION.featureName()));
+    }
+
+
+    @Test
+    public void testMetadataVersion() {
+        FeatureControlManager manager = new FeatureControlManager.Builder().build();
+        assertTrue(manager.metadataVersion().isEmpty());
+        assertThrows(IllegalStateException.class, manager::metadataVersionOrThrow);
+        manager.replay(new FeatureLevelRecord().setName(MetadataVersion.FEATURE_NAME).setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()));
+        assertTrue(manager.metadataVersion().isPresent());
+        assertEquals(MetadataVersion.MINIMUM_VERSION, manager.metadataVersion().get());
+        assertEquals(MetadataVersion.MINIMUM_VERSION, manager.metadataVersionOrThrow());
     }
 }
