@@ -17,31 +17,31 @@
 
 package org.apache.kafka.image;
 
+import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.metadata.AccessControlEntryRecord;
+import org.apache.kafka.common.metadata.RemoveAccessControlEntryRecord;
+import org.apache.kafka.metadata.authorizer.StandardAcl;
+
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Optional;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import org.apache.kafka.common.Uuid;
-import org.apache.kafka.common.metadata.AccessControlEntryRecord;
-import org.apache.kafka.common.metadata.RemoveAccessControlEntryRecord;
-import org.apache.kafka.metadata.authorizer.StandardAcl;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.Timeout;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Optional;
-
 @Timeout(40)
 public class AclsDeltaTest {
 
-    private Uuid aclId = Uuid.fromString("iOZpss6VQUmD6blnqzl50g");
+    private final Uuid aclId = Uuid.fromString("iOZpss6VQUmD6blnqzl50g");
 
     @Test
     public void testRemovesDeleteIfNotInImage() {
-        AclsImage image = new AclsImage(Collections.emptyMap());
+        AclsImage image = new AclsImage(Map.of());
         AclsDelta delta = new AclsDelta(image);
         AccessControlEntryRecord inputAclRecord = testAccessControlEntryRecord();
 
@@ -74,7 +74,7 @@ public class AclsDeltaTest {
 
     @Test
     public void testThrowsExceptionOnInvalidStateWhenImageIsEmpty() {
-        AclsImage image = new AclsImage(Collections.emptyMap());
+        AclsImage image = new AclsImage(Map.of());
         AclsDelta delta = new AclsDelta(image);
 
         RemoveAccessControlEntryRecord removeAccessControlEntryRecord = testRemoveAccessControlEntryRecord();
