@@ -17,41 +17,43 @@
 
 package org.apache.kafka.metadata.placement;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import org.apache.kafka.common.Uuid;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
+
+import static org.apache.kafka.metadata.placement.PartitionAssignmentTest.partitionAssignment;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 public class TopicAssignmentTest {
 
     @Test
     public void testTopicAssignmentReplicas() {
-        List<Integer> replicasP0 = Arrays.asList(0, 1, 2);
-        List<Integer> replicasP1 = Arrays.asList(1, 2, 0);
-        List<PartitionAssignment> partitionAssignments = Arrays.asList(
-            new PartitionAssignment(replicasP0),
-            new PartitionAssignment(replicasP1)
+        List<Integer> replicasP0 = List.of(0, 1, 2);
+        List<Integer> replicasP1 = List.of(1, 2, 0);
+        List<PartitionAssignment> partitionAssignments = List.of(
+            partitionAssignment(replicasP0),
+            partitionAssignment(replicasP1)
         );
         assertEquals(partitionAssignments, new TopicAssignment(partitionAssignments).assignments());
     }
 
     @Test
     public void testConsistentEqualsAndHashCode() {
-        List<TopicAssignment> topicAssignments = Arrays.asList(
+        List<TopicAssignment> topicAssignments = List.of(
             new TopicAssignment(
-                Arrays.asList(
-                    new PartitionAssignment(
-                        Arrays.asList(0, 1, 2)
+                List.of(
+                    partitionAssignment(
+                        List.of(0, 1, 2)
                     )
                 )
             ),
             new TopicAssignment(
-                Arrays.asList(
-                    new PartitionAssignment(
-                        Arrays.asList(1, 2, 0)
+                List.of(
+                    partitionAssignment(
+                        List.of(1, 2, 0)
                     )
                 )
             )
@@ -73,11 +75,17 @@ public class TopicAssignmentTest {
 
     @Test
     public void testToString() {
-        List<Integer> replicas = Arrays.asList(0, 1, 2);
-        List<PartitionAssignment> partitionAssignments = Arrays.asList(
-            new PartitionAssignment(replicas)
+        List<Integer> replicas = List.of(0, 1, 2);
+        List<Uuid> directories = List.of(
+                Uuid.fromString("v56qeYzNRrqNtXsxzcReog"),
+                Uuid.fromString("MvUIAsOiRlSePeiBHdZrSQ"),
+                Uuid.fromString("jUqCchHtTHqMxeVv4dw1RA")
+        );
+        List<PartitionAssignment> partitionAssignments = List.of(
+            new PartitionAssignment(replicas, directories::get)
         );
         TopicAssignment topicAssignment = new TopicAssignment(partitionAssignments);
-        assertEquals("TopicAssignment(assignments=[PartitionAssignment(replicas=[0, 1, 2])])", topicAssignment.toString());
+        assertEquals("TopicAssignment(assignments=[PartitionAssignment(replicas=[0, 1, 2], " +
+                "directories=[v56qeYzNRrqNtXsxzcReog, MvUIAsOiRlSePeiBHdZrSQ, jUqCchHtTHqMxeVv4dw1RA])])", topicAssignment.toString());
     }
 }
