@@ -17,9 +17,7 @@
 
 package org.apache.kafka.metalog;
 
-import org.apache.kafka.common.memory.MemoryPool;
 import org.apache.kafka.common.protocol.ObjectSerializationCache;
-import org.apache.kafka.common.record.CompressionType;
 import org.apache.kafka.common.utils.BufferSupplier;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.MockTime;
@@ -29,11 +27,13 @@ import org.apache.kafka.queue.EventQueue;
 import org.apache.kafka.queue.KafkaEventQueue;
 import org.apache.kafka.raft.Batch;
 import org.apache.kafka.raft.LeaderAndEpoch;
-import org.apache.kafka.raft.OffsetAndEpoch;
 import org.apache.kafka.raft.RaftClient;
+import org.apache.kafka.raft.errors.BufferAllocationException;
 import org.apache.kafka.raft.errors.NotLeaderException;
 import org.apache.kafka.raft.internals.MemoryBatchReader;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.KRaftVersion;
+import org.apache.kafka.server.common.OffsetAndEpoch;
 import org.apache.kafka.snapshot.MockRawSnapshotReader;
 import org.apache.kafka.snapshot.MockRawSnapshotWriter;
 import org.apache.kafka.snapshot.RawSnapshotReader;
@@ -42,12 +42,12 @@ import org.apache.kafka.snapshot.RecordsSnapshotReader;
 import org.apache.kafka.snapshot.RecordsSnapshotWriter;
 import org.apache.kafka.snapshot.SnapshotReader;
 import org.apache.kafka.snapshot.SnapshotWriter;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
@@ -64,11 +64,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 
 /**
  * The LocalLogManager is a test implementation that relies on the contents of memory.
@@ -98,10 +93,8 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
 
         @Override
         public boolean equals(Object o) {
-            if (!(o instanceof LeaderChangeBatch)) return false;
-            LeaderChangeBatch other = (LeaderChangeBatch) o;
-            if (!other.newLeader.equals(newLeader)) return false;
-            return true;
+            if (!(o instanceof LeaderChangeBatch other)) return false;
+            return other.newLeader.equals(newLeader);
         }
 
         @Override
@@ -138,8 +131,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
 
         @Override
         public boolean equals(Object o) {
-            if (!(o instanceof LocalRecordBatch)) return false;
-            LocalRecordBatch other = (LocalRecordBatch) o;
+            if (!(o instanceof LocalRecordBatch other)) return false;
 
             return leaderEpoch == other.leaderEpoch &&
                 appendTimestamp == other.appendTimestamp &&
@@ -163,7 +155,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
     }
 
     public static class SharedLogData {
-        private final Logger log = LoggerFactory.getLogger(SharedLogData.class);
+        private static final Logger log = LoggerFactory.getLogger(SharedLogData.class);
 
         /**
          * Maps node IDs to the matching log managers.
@@ -174,6 +166,11 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
          * Maps offsets to record batches.
          */
         private final TreeMap<Long, LocalBatch> batches = new TreeMap<>();
+
+        /**
+         * Maps committed offset to snapshot reader.
+         */
+        private final NavigableMap<Long, RawSnapshotReader> snapshots = new TreeMap<>();
 
         /**
          * The current leader.
@@ -190,11 +187,6 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
          * The initial max read offset which LocalLog instances will be configured with.
          */
         private long initialMaxReadOffset = Long.MAX_VALUE;
-
-        /**
-         * Maps committed offset to snapshot reader.
-         */
-        private NavigableMap<Long, RawSnapshotReader> snapshots = new TreeMap<>();
 
         public SharedLogData(Optional<RawSnapshotReader> snapshot) {
             if (snapshot.isPresent()) {
@@ -221,13 +213,23 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
             }
         }
 
-        synchronized long tryAppend(int nodeId, int epoch, List<ApiMessageAndVersion> batch) {
+        synchronized long tryAppend(
+            int nodeId,
+            int epoch,
+            List<ApiMessageAndVersion> batch
+        ) {
             // No easy access to the concept of time. Use the base offset as the append timestamp
             long appendTimestamp = (prevOffset + 1) * 10;
-            return tryAppend(nodeId, epoch, new LocalRecordBatch(epoch, appendTimestamp, batch));
+            return tryAppend(nodeId,
+                    epoch,
+                    new LocalRecordBatch(epoch, appendTimestamp, batch));
         }
 
-        synchronized long tryAppend(int nodeId, int epoch, LocalBatch batch) {
+        synchronized long tryAppend(
+            int nodeId,
+            int epoch,
+            LocalBatch batch
+        ) {
             if (!leader.isLeader(nodeId)) {
                 log.debug("tryAppend(nodeId={}, epoch={}): the given node id does not " +
                         "match the current leader id of {}.", nodeId, epoch, leader.leaderId());
@@ -248,18 +250,20 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
             return offset;
         }
 
-        public synchronized long append(LocalBatch batch) {
-            prevOffset += batch.size();
-            log.debug("append(batch={}, prevOffset={})", batch, prevOffset);
-            batches.put(prevOffset, batch);
-            if (batch instanceof LeaderChangeBatch) {
-                LeaderChangeBatch leaderChangeBatch = (LeaderChangeBatch) batch;
+        public synchronized long append(
+            LocalBatch batch
+        ) {
+            long nextEndOffset = prevOffset + batch.size();
+            log.debug("append(batch={}, nextEndOffset={})", batch, nextEndOffset);
+            batches.put(nextEndOffset, batch);
+            if (batch instanceof LeaderChangeBatch leaderChangeBatch) {
                 leader = leaderChangeBatch.newLeader;
             }
             for (LocalLogManager logManager : logManagers.values()) {
                 logManager.scheduleLogCheck();
             }
-            return prevOffset;
+            prevOffset = nextEndOffset;
+            return nextEndOffset;
         }
 
         synchronized void electLeaderIfNeeded() {
@@ -319,63 +323,12 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
         }
 
         /**
-         * Returns the snapshot whose last offset is the committed offset.
-         *
-         * If such snapshot doesn't exist, it waits until it does.
-         */
-        synchronized RawSnapshotReader waitForSnapshot(long committedOffset) throws InterruptedException {
-            while (true) {
-                RawSnapshotReader reader = snapshots.get(committedOffset);
-                if (reader != null) {
-                    return reader;
-                } else {
-                    this.wait();
-                }
-            }
-        }
-
-        /**
-         * Returns the latest snapshot.
-         *
-         * If a snapshot doesn't exists, it waits until it does.
-         */
-        synchronized RawSnapshotReader waitForLatestSnapshot() throws InterruptedException {
-            while (snapshots.isEmpty()) {
-                this.wait();
-            }
-
-            return Objects.requireNonNull(snapshots.lastEntry()).getValue();
-        }
-
-        /**
          * Returns the snapshot id of the latest snapshot if there is one.
          *
          * If a snapshot doesn't exists, it return an empty Optional.
          */
         synchronized Optional<OffsetAndEpoch> latestSnapshotId() {
             return Optional.ofNullable(snapshots.lastEntry()).map(entry -> entry.getValue().snapshotId());
-        }
-
-        synchronized long appendedBytes() {
-            ObjectSerializationCache objectCache = new ObjectSerializationCache();
-
-            return batches
-                .values()
-                .stream()
-                .flatMapToInt(batch -> {
-                    if (batch instanceof LocalRecordBatch) {
-                        LocalRecordBatch localBatch = (LocalRecordBatch) batch;
-                        return localBatch.records.stream().mapToInt(record -> messageSize(record, objectCache));
-                    } else {
-                        return IntStream.empty();
-                    }
-                })
-                .sum();
-        }
-
-        public SharedLogData setInitialMaxReadOffset(long initialMaxReadOffset) {
-            this.initialMaxReadOffset = initialMaxReadOffset;
-            return this;
         }
 
         public long initialMaxReadOffset() {
@@ -388,8 +341,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
         public synchronized List<ApiMessageAndVersion> allRecords() {
             List<ApiMessageAndVersion> allRecords = new ArrayList<>();
             for (LocalBatch batch : batches.values()) {
-                if (batch instanceof LocalRecordBatch) {
-                    LocalRecordBatch recordBatch = (LocalRecordBatch) batch;
+                if (batch instanceof LocalRecordBatch recordBatch) {
                     allRecords.addAll(recordBatch.records);
                 }
             }
@@ -424,8 +376,8 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
             offset = reader.lastOffset().getAsLong();
         }
 
-        void handleSnapshot(SnapshotReader<ApiMessageAndVersion> reader) {
-            listener.handleSnapshot(reader);
+        void handleLoadSnapshot(SnapshotReader<ApiMessageAndVersion> reader) {
+            listener.handleLoadSnapshot(reader);
             offset = reader.lastContainedLogOffset();
         }
 
@@ -442,6 +394,8 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
             listener.beginShutdown();
         }
     }
+
+    private final LogContext logContext;
 
     private final Logger log;
 
@@ -461,9 +415,9 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
     private final EventQueue eventQueue;
 
     /**
-     * Whether this LocalLogManager has been initialized.
+     * The latest kraft version used by this local log manager.
      */
-    private boolean initialized = false;
+    private KRaftVersion lastKRaftVersion;
 
     /**
      * Whether this LocalLogManager has been shut down.
@@ -474,7 +428,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
      * An offset that the log manager will not read beyond. This exists only for testing
      * purposes.
      */
-    private long maxReadOffset = Long.MAX_VALUE;
+    private long maxReadOffset;
 
     /**
      * The listener objects attached to this local log manager.
@@ -487,22 +441,23 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
     private volatile LeaderAndEpoch leader = new LeaderAndEpoch(OptionalInt.empty(), 0);
 
     /*
-     * If this variable is true the next non-atomic append with more than 1 record will
-     * result is half the records getting appended with leader election following that.
-     * This is done to emulate having some of the records not getting committed.
+     * If this variable is true the next scheduleAppend will fail
      */
-    private AtomicBoolean resignAfterNonAtomicCommit = new AtomicBoolean(false);
+    private final AtomicBoolean throwOnNextAppend = new AtomicBoolean(false);
 
     public LocalLogManager(LogContext logContext,
                            int nodeId,
                            SharedLogData shared,
-                           String threadNamePrefix) {
+                           String threadNamePrefix,
+                           KRaftVersion lastKRaftVersion) {
+        this.logContext = logContext;
         this.log = logContext.logger(LocalLogManager.class);
         this.nodeId = nodeId;
         this.shared = shared;
         this.maxReadOffset = shared.initialMaxReadOffset();
         this.eventQueue = new KafkaEventQueue(Time.SYSTEM, logContext,
                 threadNamePrefix, new ShutdownEvent());
+        this.lastKRaftVersion = lastKRaftVersion;
         shared.registerLogManager(this);
     }
 
@@ -519,13 +474,14 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
                             Optional<RawSnapshotReader> snapshot = shared.nextSnapshot(listenerData.offset());
                             if (snapshot.isPresent()) {
                                 log.trace("Node {}: handling snapshot with id {}.", nodeId, snapshot.get().snapshotId());
-                                listenerData.handleSnapshot(
+                                listenerData.handleLoadSnapshot(
                                     RecordsSnapshotReader.of(
                                         snapshot.get(),
                                         new  MetadataRecordSerde(),
                                         BufferSupplier.create(),
                                         Integer.MAX_VALUE,
-                                        true
+                                        true,
+                                        logContext
                                     )
                                 );
                             }
@@ -544,8 +500,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
                                 nodeId, numEntriesFound, entryOffset, maxReadOffset);
                             break;
                         }
-                        if (entry.getValue() instanceof LeaderChangeBatch) {
-                            LeaderChangeBatch batch = (LeaderChangeBatch) entry.getValue();
+                        if (entry.getValue() instanceof LeaderChangeBatch batch) {
                             log.trace("Node {}: handling LeaderChange to {}.",
                                 nodeId, batch.newLeader);
                             // Only notify the listener if it equals the shared leader state
@@ -553,24 +508,23 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
                             if (batch.newLeader.equals(sharedLeader)) {
                                 log.debug("Node {}: Executing handleLeaderChange {}",
                                     nodeId, sharedLeader);
-                                listenerData.handleLeaderChange(entryOffset, batch.newLeader);
                                 if (batch.newLeader.epoch() > leader.epoch()) {
                                     leader = batch.newLeader;
                                 }
+                                listenerData.handleLeaderChange(entryOffset, batch.newLeader);
                             } else {
                                 log.debug("Node {}: Ignoring {} since it doesn't match the latest known leader {}",
                                         nodeId, batch.newLeader, sharedLeader);
                                 listenerData.setOffset(entryOffset);
                             }
-                        } else if (entry.getValue() instanceof LocalRecordBatch) {
-                            LocalRecordBatch batch = (LocalRecordBatch) entry.getValue();
+                        } else if (entry.getValue() instanceof LocalRecordBatch batch) {
                             log.trace("Node {}: handling LocalRecordBatch with offset {}.",
                                 nodeId, entryOffset);
                             ObjectSerializationCache objectCache = new ObjectSerializationCache();
 
                             listenerData.handleCommit(
                                 MemoryBatchReader.of(
-                                    Collections.singletonList(
+                                    List.of(
                                         Batch.data(
                                             entryOffset - batch.records.size() + 1,
                                             batch.leaderEpoch,
@@ -609,7 +563,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
         @Override
         public void run() throws Exception {
             try {
-                if (initialized && !shutdown) {
+                if (!shutdown) {
                     log.debug("Node {}: beginning shutdown.", nodeId);
                     resign(leader.epoch());
                     for (MetaLogListenerData listenerData : listeners.values()) {
@@ -656,14 +610,6 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
     }
 
     @Override
-    public void initialize() {
-        eventQueue.append(() -> {
-            log.debug("initialized local log manager for node " + nodeId);
-            initialized = true;
-        });
-    }
-
-    @Override
     public void register(RaftClient.Listener<ApiMessageAndVersion> listener) {
         CompletableFuture<Void> future = new CompletableFuture<>();
         eventQueue.append(() -> {
@@ -671,7 +617,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
                 log.info("Node {}: can't register because local log manager has " +
                     "already been shut down.", nodeId);
                 future.complete(null);
-            } else if (initialized) {
+            } else {
                 int id = System.identityHashCode(listener);
                 if (listeners.putIfAbsent(listener, new MetaLogListenerData(listener)) != null) {
                     log.error("Node {}: can't register because listener {} already exists", nodeId, id);
@@ -681,11 +627,6 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
                 shared.electLeaderIfNeeded();
                 scheduleLogCheck();
                 future.complete(null);
-            } else {
-                log.info("Node {}: can't register because local log manager has not " +
-                    "been initialized.", nodeId);
-                future.completeExceptionally(new RuntimeException(
-                    "LocalLogManager was not initialized."));
             }
         });
         try {
@@ -724,41 +665,23 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
     }
 
     @Override
-    public long scheduleAppend(int epoch, List<ApiMessageAndVersion> batch) {
+    public long prepareAppend(
+        int epoch,
+        List<ApiMessageAndVersion> batch
+    ) {
         if (batch.isEmpty()) {
             throw new IllegalArgumentException("Batch cannot be empty");
         }
 
-        List<ApiMessageAndVersion> first = batch.subList(0, batch.size() / 2);
-        List<ApiMessageAndVersion> second = batch.subList(batch.size() / 2, batch.size());
-
-        assertEquals(batch.size(), first.size() + second.size());
-        assertFalse(second.isEmpty());
-
-        OptionalLong firstOffset = first
-            .stream()
-            .mapToLong(record -> scheduleAtomicAppend(epoch, Collections.singletonList(record)))
-            .max();
-
-        if (firstOffset.isPresent() && resignAfterNonAtomicCommit.getAndSet(false)) {
-            // Emulate losing leadership in the middle of a non-atomic append by not writing
-            // the rest of the batch and instead writing a leader change message
-            resign(leader.epoch());
-
-            return firstOffset.getAsLong() + second.size();
-        } else {
-            return second
-                .stream()
-                .mapToLong(record -> scheduleAtomicAppend(epoch, Collections.singletonList(record)))
-                .max()
-                .getAsLong();
+        if (throwOnNextAppend.getAndSet(false)) {
+            throw new BufferAllocationException("Test asked to fail the next prepareAppend");
         }
+
+        return shared.tryAppend(nodeId, epoch, batch);
     }
 
     @Override
-    public long scheduleAtomicAppend(int epoch, List<ApiMessageAndVersion> batch) {
-        return shared.tryAppend(nodeId, leader.epoch(), batch);
-    }
+    public void schedulePreparedAppend() { }
 
     @Override
     public void resign(int epoch) {
@@ -784,12 +707,13 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
 
         LeaderAndEpoch nextLeader = new LeaderAndEpoch(OptionalInt.empty(), currentEpoch + 1);
         try {
-            shared.tryAppend(nodeId, currentEpoch, new LeaderChangeBatch(nextLeader));
+            shared.tryAppend(nodeId,
+                    currentEpoch,
+                    new LeaderChangeBatch(nextLeader));
         } catch (NotLeaderException exp) {
             // the leader epoch has already advanced. resign is a no op.
             log.debug("Ignoring call to resign from epoch {}. Either we are not the leader or the provided epoch is " +
                     "smaller than the current epoch {}", epoch, currentEpoch);
-            return;
         }
     }
 
@@ -798,28 +722,30 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
         OffsetAndEpoch snapshotId,
         long lastContainedLogTimestamp
     ) {
-        return RecordsSnapshotWriter.createWithHeader(
-            () -> createNewSnapshot(snapshotId),
-            1024,
-            MemoryPool.NONE,
-            new MockTime(),
-            lastContainedLogTimestamp,
-            CompressionType.NONE,
-            new MetadataRecordSerde()
+        return Optional.of(
+            new RecordsSnapshotWriter.Builder()
+                .setLastContainedLogTimestamp(lastContainedLogTimestamp)
+                .setTime(new MockTime())
+                .setRawSnapshotWriter(createNewSnapshot(snapshotId))
+                .build(new MetadataRecordSerde())
         );
     }
 
-    private Optional<RawSnapshotWriter> createNewSnapshot(OffsetAndEpoch snapshotId) {
-        return Optional.of(
-            new MockRawSnapshotWriter(snapshotId, buffer -> {
-                shared.addSnapshot(new MockRawSnapshotReader(snapshotId, buffer));
-            })
+    private RawSnapshotWriter createNewSnapshot(OffsetAndEpoch snapshotId) {
+        return new MockRawSnapshotWriter(
+            snapshotId,
+            buffer -> shared.addSnapshot(new MockRawSnapshotReader(snapshotId, buffer))
         );
     }
 
     @Override
     public synchronized Optional<OffsetAndEpoch> latestSnapshotId() {
         return shared.latestSnapshotId();
+    }
+
+    @Override
+    public synchronized long logEndOffset() {
+        return shared.prevOffset + 1;
     }
 
     @Override
@@ -834,9 +760,9 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
 
     public List<RaftClient.Listener<ApiMessageAndVersion>> listeners() {
         final CompletableFuture<List<RaftClient.Listener<ApiMessageAndVersion>>> future = new CompletableFuture<>();
-        eventQueue.append(() -> {
-            future.complete(listeners.values().stream().map(l -> l.listener).collect(Collectors.toList()));
-        });
+        eventQueue.append(() ->
+            future.complete(listeners.values().stream().map(l -> l.listener).toList())
+        );
         try {
             return future.get();
         } catch (ExecutionException | InterruptedException e) {
@@ -859,7 +785,19 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
         }
     }
 
-    public void resignAfterNonAtomicCommit() {
-        resignAfterNonAtomicCommit.set(true);
+    public void throwOnNextAppend() {
+        throwOnNextAppend.set(true);
+    }
+
+    @Override
+    public KRaftVersion kraftVersion() {
+        return lastKRaftVersion;
+    }
+
+    @Override
+    public void upgradeKRaftVersion(int epoch, KRaftVersion version, boolean validateOnly) {
+        if (!validateOnly) {
+            lastKRaftVersion = version;
+        }
     }
 }
