@@ -17,17 +17,16 @@
 package org.apache.kafka.storage.internals.log;
 
 import org.apache.kafka.common.TopicPartition;
-import org.apache.kafka.common.protocol.types.ArrayOf;
-import org.apache.kafka.common.protocol.types.Field;
-import org.apache.kafka.common.protocol.types.Schema;
-import org.apache.kafka.common.protocol.types.SchemaException;
-import org.apache.kafka.common.protocol.types.Struct;
-import org.apache.kafka.common.protocol.types.Type;
+import org.apache.kafka.common.protocol.ByteBufferAccessor;
+import org.apache.kafka.common.protocol.MessageUtil;
 import org.apache.kafka.common.record.RecordBatch;
 import org.apache.kafka.common.utils.ByteUtils;
 import org.apache.kafka.common.utils.Crc32C;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.Time;
+import org.apache.kafka.common.utils.Utils;
+import org.apache.kafka.server.log.remote.metadata.storage.generated.ProducerSnapshot;
+
 import org.slf4j.Logger;
 
 import java.io.File;
@@ -50,7 +49,6 @@ import java.util.Optional;
 import java.util.OptionalLong;
 import java.util.TreeMap;
 import java.util.concurrent.ConcurrentSkipListMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -73,36 +71,9 @@ public class ProducerStateManager {
 
     public static final long LATE_TRANSACTION_BUFFER_MS = 5 * 60 * 1000;
 
-    private static final short PRODUCER_SNAPSHOT_VERSION = 1;
-    private static final String VERSION_FIELD = "version";
-    private static final String CRC_FIELD = "crc";
-    private static final String PRODUCER_ID_FIELD = "producer_id";
-    private static final String LAST_SEQUENCE_FIELD = "last_sequence";
-    private static final String PRODUCER_EPOCH_FIELD = "epoch";
-    private static final String LAST_OFFSET_FIELD = "last_offset";
-    private static final String OFFSET_DELTA_FIELD = "offset_delta";
-    private static final String TIMESTAMP_FIELD = "timestamp";
-    private static final String PRODUCER_ENTRIES_FIELD = "producer_entries";
-    private static final String COORDINATOR_EPOCH_FIELD = "coordinator_epoch";
-    private static final String CURRENT_TXN_FIRST_OFFSET_FIELD = "current_txn_first_offset";
-
     private static final int VERSION_OFFSET = 0;
     private static final int CRC_OFFSET = VERSION_OFFSET + 2;
     private static final int PRODUCER_ENTRIES_OFFSET = CRC_OFFSET + 4;
-
-    private static final Schema PRODUCER_SNAPSHOT_ENTRY_SCHEMA =
-            new Schema(new Field(PRODUCER_ID_FIELD, Type.INT64, "The producer ID"),
-                    new Field(PRODUCER_EPOCH_FIELD, Type.INT16, "Current epoch of the producer"),
-                    new Field(LAST_SEQUENCE_FIELD, Type.INT32, "Last written sequence of the producer"),
-                    new Field(LAST_OFFSET_FIELD, Type.INT64, "Last written offset of the producer"),
-                    new Field(OFFSET_DELTA_FIELD, Type.INT32, "The difference of the last sequence and first sequence in the last written batch"),
-                    new Field(TIMESTAMP_FIELD, Type.INT64, "Max timestamp from the last written entry"),
-                    new Field(COORDINATOR_EPOCH_FIELD, Type.INT32, "The epoch of the last transaction coordinator to send an end transaction marker"),
-                    new Field(CURRENT_TXN_FIRST_OFFSET_FIELD, Type.INT64, "The first offset of the on-going transaction (-1 if there is none)"));
-    private static final Schema PID_SNAPSHOT_MAP_SCHEMA =
-            new Schema(new Field(VERSION_FIELD, Type.INT16, "Version of the snapshot file"),
-                    new Field(CRC_FIELD, Type.UNSIGNED_INT32, "CRC of the snapshot data"),
-                    new Field(PRODUCER_ENTRIES_FIELD, new ArrayOf(PRODUCER_SNAPSHOT_ENTRY_SCHEMA), "The entries in the producer table"));
 
     private final Logger log;
 
@@ -113,6 +84,8 @@ public class ProducerStateManager {
 
     private final Map<Long, ProducerStateEntry> producers = new HashMap<>();
 
+    private final Map<Long, VerificationStateEntry> verificationStates = new HashMap<>();
+
     // ongoing transactions sorted by the first offset of the transaction
     private final TreeMap<Long, TxnMetadata> ongoingTxns = new TreeMap<>();
 
@@ -120,6 +93,9 @@ public class ProducerStateManager {
     private final TreeMap<Long, TxnMetadata> unreplicatedTxns = new TreeMap<>();
 
     private volatile File logDir;
+
+    // The same as producers.size, but for lock-free access.
+    private volatile int producerIdCount = 0;
 
     // Keep track of the last timestamp from the oldest transaction. This is used
     // to detect (approximately) when a transaction has been left hanging on a partition.
@@ -136,7 +112,7 @@ public class ProducerStateManager {
         this.maxTransactionTimeoutMs = maxTransactionTimeoutMs;
         this.producerStateManagerConfig = producerStateManagerConfig;
         this.time = time;
-        log = new LogContext("[ProducerStateManager partition=" + topicPartition + "]").logger(ProducerStateManager.class);
+        log = new LogContext("[ProducerStateManager partition=" + topicPartition + "] ").logger(ProducerStateManager.class);
         snapshots = loadSnapshots();
     }
 
@@ -160,6 +136,46 @@ public class ProducerStateManager {
         log.info("Reloading the producer state snapshots");
         truncateFullyAndStartAt(0L);
         snapshots = loadSnapshots();
+    }
+
+    public int producerIdCount() {
+        return producerIdCount;
+    }
+
+    private void addProducerId(long producerId, ProducerStateEntry entry) {
+        producers.put(producerId, entry);
+        producerIdCount = producers.size();
+    }
+
+    private void clearProducerIds() {
+        producers.clear();
+        producerIdCount = 0;
+    }
+
+    /**
+     * Maybe create the VerificationStateEntry for a given producer ID and return it.
+     * This method also updates the sequence and epoch accordingly.
+     */
+    public VerificationStateEntry maybeCreateVerificationStateEntry(long producerId, int sequence, short epoch, boolean supportsEpochBump) {
+        VerificationStateEntry entry = verificationStates.computeIfAbsent(producerId, pid ->
+            new VerificationStateEntry(time.milliseconds(), sequence, epoch, supportsEpochBump)
+        );
+        entry.maybeUpdateLowestSequenceAndEpoch(sequence, epoch);
+        return entry;
+    }
+
+    /**
+     * Return the VerificationStateEntry for the producer ID if it exists, otherwise return null.
+     */
+    public VerificationStateEntry verificationStateEntry(long producerId) {
+        return verificationStates.get(producerId);
+    }
+
+    /**
+     * Clear the verificationStateEntry for the given producer ID.
+     */
+    public void clearVerificationStateEntry(long producerId) {
+        verificationStates.remove(producerId);
     }
 
     /**
@@ -231,9 +247,9 @@ public class ProducerStateManager {
         Optional<LogOffsetMetadata> unreplicatedFirstOffset = Optional.ofNullable(unreplicatedTxns.firstEntry()).map(e -> e.getValue().firstOffset);
         Optional<LogOffsetMetadata> undecidedFirstOffset = Optional.ofNullable(ongoingTxns.firstEntry()).map(e -> e.getValue().firstOffset);
 
-        if (!unreplicatedFirstOffset.isPresent())
+        if (unreplicatedFirstOffset.isEmpty())
             return undecidedFirstOffset;
-        else if (!undecidedFirstOffset.isPresent())
+        else if (undecidedFirstOffset.isEmpty())
             return unreplicatedFirstOffset;
         else if (undecidedFirstOffset.get().messageOffset < unreplicatedFirstOffset.get().messageOffset)
             return undecidedFirstOffset;
@@ -306,23 +322,25 @@ public class ProducerStateManager {
     // Visible for testing
     public void loadProducerEntry(ProducerStateEntry entry) {
         long producerId = entry.producerId();
-        producers.put(producerId, entry);
+        addProducerId(producerId, entry);
         entry.currentTxnFirstOffset().ifPresent(offset -> ongoingTxns.put(offset, new TxnMetadata(producerId, offset)));
     }
 
     private boolean isProducerExpired(long currentTimeMs, ProducerStateEntry producerState) {
-        return !producerState.currentTxnFirstOffset().isPresent() && currentTimeMs - producerState.lastTimestamp() >= producerStateManagerConfig.producerIdExpirationMs();
+        return producerState.currentTxnFirstOffset().isEmpty() && currentTimeMs - producerState.lastTimestamp() >= producerStateManagerConfig.producerIdExpirationMs();
     }
 
     /**
      * Expire any producer ids which have been idle longer than the configured maximum expiration timeout.
+     * Also expire any verification state entries that are lingering as unverified.
      */
     public void removeExpiredProducers(long currentTimeMs) {
-        List<Long> keys = producers.entrySet().stream()
-                .filter(entry -> isProducerExpired(currentTimeMs, entry.getValue()))
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
-        producers.keySet().removeAll(keys);
+        producers.entrySet().removeIf(entry -> isProducerExpired(currentTimeMs, entry.getValue()));
+        producerIdCount = producers.size();
+
+        verificationStates.entrySet().removeIf(entry ->
+            (currentTimeMs - entry.getValue().timestamp()) >= producerStateManagerConfig.producerIdExpirationMs()
+        );
     }
 
     /**
@@ -342,7 +360,7 @@ public class ProducerStateManager {
         }
 
         if (logEndOffset != mapEndOffset()) {
-            producers.clear();
+            clearProducerIds();
             ongoingTxns.clear();
             updateOldestTxnTimestamp();
 
@@ -357,7 +375,7 @@ public class ProducerStateManager {
 
     public ProducerAppendInfo prepareUpdate(long producerId, AppendOrigin origin) {
         ProducerStateEntry currentEntry = lastEntry(producerId).orElse(ProducerStateEntry.empty(producerId));
-        return new ProducerAppendInfo(topicPartition, producerId, currentEntry, origin);
+        return new ProducerAppendInfo(topicPartition, producerId, currentEntry, origin, verificationStateEntry(producerId));
     }
 
     /**
@@ -374,7 +392,7 @@ public class ProducerStateManager {
         if (currentEntry != null) {
             currentEntry.update(updatedEntry);
         } else {
-            producers.put(appendInfo.producerId(), updatedEntry);
+            addProducerId(appendInfo.producerId(), updatedEntry);
         }
 
         appendInfo.startedTransactions().forEach(txn -> ongoingTxns.put(txn.firstOffset.messageOffset, txn));
@@ -405,14 +423,21 @@ public class ProducerStateManager {
     }
 
     /**
-     * Take a snapshot at the current end offset if one does not already exist.
+     * Take a snapshot at the current end offset if one does not already exist with syncing the change to the device
      */
     public void takeSnapshot() throws IOException {
+        takeSnapshot(true);
+    }
+
+    /**
+     * Take a snapshot at the current end offset if one does not already exist, then return the snapshot file if taken.
+     */
+    public Optional<File> takeSnapshot(boolean sync) throws IOException {
         // If not a new offset, then it is not worth taking another snapshot
         if (lastMapOffset > lastSnapOffset) {
             SnapshotFile snapshotFile = new SnapshotFile(LogFileUtils.producerSnapshotFile(logDir, lastMapOffset));
             long start = time.hiResClockMs();
-            writeSnapshot(snapshotFile.file(), producers);
+            writeSnapshot(snapshotFile.file(), producers, sync);
             log.info("Wrote producer snapshot at offset {} with {} producer ids in {} ms.", lastMapOffset,
                     producers.size(), time.hiResClockMs() - start);
 
@@ -420,7 +445,10 @@ public class ProducerStateManager {
 
             // Update the last snap offset according to the serialized map
             lastSnapOffset = lastMapOffset;
+
+            return Optional.of(snapshotFile.file());
         }
+        return Optional.empty();
     }
 
     /**
@@ -479,7 +507,7 @@ public class ProducerStateManager {
      * Truncate the producer id mapping and remove all snapshots. This resets the state of the mapping.
      */
     public void truncateFullyAndStartAt(long offset) throws IOException {
-        producers.clear();
+        clearProducerIds();
         ongoingTxns.clear();
         unreplicatedTxns.clear();
         for (SnapshotFile snapshotFile : snapshots.values()) {
@@ -537,12 +565,16 @@ public class ProducerStateManager {
         }
     }
 
+    public Optional<File> fetchSnapshot(long offset) {
+        return Optional.ofNullable(snapshots.get(offset)).map(SnapshotFile::file);
+    }
+
     private Optional<SnapshotFile> oldestSnapshotFile() {
-        return Optional.ofNullable(snapshots.firstEntry()).map(x -> x.getValue());
+        return Optional.ofNullable(snapshots.firstEntry()).map(Map.Entry::getValue);
     }
 
     private Optional<SnapshotFile> latestSnapshotFile() {
-        return Optional.ofNullable(snapshots.lastEntry()).map(e -> e.getValue());
+        return Optional.ofNullable(snapshots.lastEntry()).map(Map.Entry::getValue);
     }
 
     /**
@@ -574,7 +606,7 @@ public class ProducerStateManager {
             // deletion, so ignoring the exception here just means that the intended operation was
             // already completed.
             try {
-                snapshotFile.renameTo(LogFileUtils.DELETED_FILE_SUFFIX);
+                snapshotFile.renameToDelete();
                 return Optional.of(snapshotFile);
             } catch (NoSuchFileException ex) {
                 log.info("Failed to rename producer state snapshot {} with deletion suffix because it was already deleted", snapshotFile.file().getAbsoluteFile());
@@ -584,78 +616,78 @@ public class ProducerStateManager {
     }
 
     public static List<ProducerStateEntry> readSnapshot(File file) throws IOException {
+        byte[] buffer = Files.readAllBytes(file.toPath());
+
+        ByteBuffer byteBuffer = ByteBuffer.wrap(buffer);
+        short version;
+        ProducerSnapshot producerSnapshot;
         try {
-            byte[] buffer = Files.readAllBytes(file.toPath());
-            Struct struct = PID_SNAPSHOT_MAP_SCHEMA.read(ByteBuffer.wrap(buffer));
-
-            Short version = struct.getShort(VERSION_FIELD);
-            if (version != PRODUCER_SNAPSHOT_VERSION)
+            version = byteBuffer.getShort();
+            if (version < ProducerSnapshot.LOWEST_SUPPORTED_VERSION || version > ProducerSnapshot.HIGHEST_SUPPORTED_VERSION)
                 throw new CorruptSnapshotException("Snapshot contained an unknown file version " + version);
-
-            long crc = struct.getUnsignedInt(CRC_FIELD);
-            long computedCrc = Crc32C.compute(buffer, PRODUCER_ENTRIES_OFFSET, buffer.length - PRODUCER_ENTRIES_OFFSET);
-            if (crc != computedCrc)
-                throw new CorruptSnapshotException("Snapshot is corrupt (CRC is no longer valid). Stored crc: " + crc
-                        + ". Computed crc: " + computedCrc);
-
-            Object[] producerEntryFields = struct.getArray(PRODUCER_ENTRIES_FIELD);
-            List<ProducerStateEntry> entries = new ArrayList<>(producerEntryFields.length);
-            for (Object producerEntryObj : producerEntryFields) {
-                Struct producerEntryStruct = (Struct) producerEntryObj;
-                long producerId = producerEntryStruct.getLong(PRODUCER_ID_FIELD);
-                short producerEpoch = producerEntryStruct.getShort(PRODUCER_EPOCH_FIELD);
-                int seq = producerEntryStruct.getInt(LAST_SEQUENCE_FIELD);
-                long offset = producerEntryStruct.getLong(LAST_OFFSET_FIELD);
-                long timestamp = producerEntryStruct.getLong(TIMESTAMP_FIELD);
-                int offsetDelta = producerEntryStruct.getInt(OFFSET_DELTA_FIELD);
-                int coordinatorEpoch = producerEntryStruct.getInt(COORDINATOR_EPOCH_FIELD);
-                long currentTxnFirstOffset = producerEntryStruct.getLong(CURRENT_TXN_FIRST_OFFSET_FIELD);
-
-                OptionalLong currentTxnFirstOffsetVal = currentTxnFirstOffset >= 0 ? OptionalLong.of(currentTxnFirstOffset) : OptionalLong.empty();
-                Optional<BatchMetadata> batchMetadata =
-                        (offset >= 0) ? Optional.of(new BatchMetadata(seq, offset, offsetDelta, timestamp)) : Optional.empty();
-                entries.add(new ProducerStateEntry(producerId, producerEpoch, coordinatorEpoch, timestamp, currentTxnFirstOffsetVal, batchMetadata));
-            }
-
-            return entries;
-        } catch (SchemaException e) {
+            producerSnapshot = new ProducerSnapshot(new ByteBufferAccessor(byteBuffer), version);
+        } catch (Exception e) {
             throw new CorruptSnapshotException("Snapshot failed schema validation: " + e.getMessage());
         }
+
+        long crc = producerSnapshot.crc();
+        long computedCrc = Crc32C.compute(buffer, PRODUCER_ENTRIES_OFFSET, buffer.length - PRODUCER_ENTRIES_OFFSET);
+        if (crc != computedCrc)
+            throw new CorruptSnapshotException("Snapshot is corrupt (CRC is no longer valid). Stored crc: " + crc
+                    + ". Computed crc: " + computedCrc);
+
+        List<ProducerSnapshot.ProducerEntry> producerEntries = producerSnapshot.producerEntries();
+        List<ProducerStateEntry> entries = new ArrayList<>(producerEntries.size());
+        for (ProducerSnapshot.ProducerEntry producerEntry : producerEntries) {
+            long producerId = producerEntry.producerId();
+            short producerEpoch = producerEntry.epoch();
+            int lastSequence = producerEntry.lastSequence();
+            long lastOffset = producerEntry.lastOffset();
+            long timestamp = producerEntry.timestamp();
+            int offsetDelta = producerEntry.offsetDelta();
+            int coordinatorEpoch = producerEntry.coordinatorEpoch();
+            long currentTxnFirstOffset = producerEntry.currentTxnFirstOffset();
+
+            OptionalLong currentTxnFirstOffsetVal = currentTxnFirstOffset >= 0 ? OptionalLong.of(currentTxnFirstOffset) : OptionalLong.empty();
+            Optional<BatchMetadata> batchMetadata =
+                    (lastOffset >= 0) ? Optional.of(new BatchMetadata(lastSequence, lastOffset, offsetDelta, timestamp)) : Optional.empty();
+            entries.add(new ProducerStateEntry(producerId, producerEpoch, coordinatorEpoch, timestamp, currentTxnFirstOffsetVal, batchMetadata));
+        }
+
+        return entries;
     }
 
-    private static void writeSnapshot(File file, Map<Long, ProducerStateEntry> entries) throws IOException {
-        Struct struct = new Struct(PID_SNAPSHOT_MAP_SCHEMA);
-        struct.set(VERSION_FIELD, PRODUCER_SNAPSHOT_VERSION);
-        struct.set(CRC_FIELD, 0L); // we'll fill this after writing the entries
-        Struct[] structEntries = new Struct[entries.size()];
-        int i = 0;
+    // visible for testing
+    public static void writeSnapshot(File file, Map<Long, ProducerStateEntry> entries, boolean sync) throws IOException {
+        ProducerSnapshot producerSnapshot = new ProducerSnapshot();
+        List<ProducerSnapshot.ProducerEntry> producerEntries = new ArrayList<>(entries.size());
         for (Map.Entry<Long, ProducerStateEntry> producerIdEntry : entries.entrySet()) {
             Long producerId = producerIdEntry.getKey();
             ProducerStateEntry entry = producerIdEntry.getValue();
-            Struct producerEntryStruct = struct.instance(PRODUCER_ENTRIES_FIELD);
-            producerEntryStruct.set(PRODUCER_ID_FIELD, producerId)
-                    .set(PRODUCER_EPOCH_FIELD, entry.producerEpoch())
-                    .set(LAST_SEQUENCE_FIELD, entry.lastSeq())
-                    .set(LAST_OFFSET_FIELD, entry.lastDataOffset())
-                    .set(OFFSET_DELTA_FIELD, entry.lastOffsetDelta())
-                    .set(TIMESTAMP_FIELD, entry.lastTimestamp())
-                    .set(COORDINATOR_EPOCH_FIELD, entry.coordinatorEpoch())
-                    .set(CURRENT_TXN_FIRST_OFFSET_FIELD, entry.currentTxnFirstOffset().orElse(-1L));
-            structEntries[i++] = producerEntryStruct;
+            ProducerSnapshot.ProducerEntry producerEntry = new ProducerSnapshot.ProducerEntry()
+                    .setProducerId(producerId)
+                    .setEpoch(entry.producerEpoch())
+                    .setLastSequence(entry.lastSeq())
+                    .setLastOffset(entry.lastDataOffset())
+                    .setOffsetDelta(entry.lastOffsetDelta())
+                    .setTimestamp(entry.lastTimestamp())
+                    .setCoordinatorEpoch(entry.coordinatorEpoch())
+                    .setCurrentTxnFirstOffset(entry.currentTxnFirstOffset().orElse(-1L));
+            producerEntries.add(producerEntry);
         }
-        struct.set(PRODUCER_ENTRIES_FIELD, structEntries);
 
-        ByteBuffer buffer = ByteBuffer.allocate(struct.sizeOf());
-        struct.writeTo(buffer);
-        buffer.flip();
+        producerSnapshot.setProducerEntries(producerEntries);
+        ByteBuffer buffer = MessageUtil.toVersionPrefixedByteBuffer(ProducerSnapshot.HIGHEST_SUPPORTED_VERSION, producerSnapshot);
 
         // now fill in the CRC
         long crc = Crc32C.compute(buffer, PRODUCER_ENTRIES_OFFSET, buffer.limit() - PRODUCER_ENTRIES_OFFSET);
         ByteUtils.writeUnsignedInt(buffer, CRC_OFFSET, crc);
 
         try (FileChannel fileChannel = FileChannel.open(file.toPath(), StandardOpenOption.CREATE, StandardOpenOption.WRITE)) {
-            fileChannel.write(buffer);
-            fileChannel.force(true);
+            Utils.writeFully(fileChannel, buffer);
+            if (sync) {
+                fileChannel.force(true);
+            }
         }
     }
 
@@ -668,10 +700,10 @@ public class ProducerStateManager {
         if (dir.exists() && dir.isDirectory()) {
             try (Stream<Path> paths = Files.list(dir.toPath())) {
                 return paths.filter(ProducerStateManager::isSnapshotFile)
-                        .map(path -> new SnapshotFile(path.toFile())).collect(Collectors.toList());
+                        .map(path -> new SnapshotFile(path.toFile())).toList();
             }
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
