@@ -16,12 +16,10 @@
  */
 package org.apache.kafka.storage.internals.log;
 
-import static java.util.Arrays.asList;
-
-import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.kafka.common.config.ConfigDef.Validator;
 import org.apache.kafka.common.config.ConfigException;
+
+import java.util.List;
 
 public class ThrottledReplicaListValidator implements Validator {
     public static final Validator INSTANCE = new ThrottledReplicaListValidator();
@@ -29,13 +27,13 @@ public class ThrottledReplicaListValidator implements Validator {
     private ThrottledReplicaListValidator() { }
 
     public static void ensureValidString(String name, String value) {
-        INSTANCE.ensureValid(name, asList(value.split(",")));
+        INSTANCE.ensureValid(name, List.of(value.split(",")));
     }
 
     @Override
     public void ensureValid(String name, Object value) {
         if (value instanceof java.util.List<?>) {
-            List<String> proposed = ((List<?>) value).stream().map(element -> element.toString().trim()).collect(Collectors.toList());
+            List<String> proposed = ((List<?>) value).stream().map(element -> element.toString().trim()).toList();
             if (!(proposed.stream().allMatch(s -> s.matches("([0-9]+:[0-9]+)?"))
                     || String.join("", proposed).equals("*")))
                 throw new ConfigException(name, value, name +
